# chshtui

./: Cargo.toml
src/: editors.rs  els.rs  fs.rs  layout.rs  main.rs  roll.rs  scenes.rs  spells.rs  stats.rs  view.rs
src/spells/: mod.rs  widget.rs
