[package]
name = "chshtui"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-input = "0.14.0"

[dependencies.attohttpc]
version = "0.30.1"
default-features = false
features = [ "tls-rustls-webpki-roots", "json" ]

