[package]
name = "chshtui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tui-input = "0.14.0"
xml = "1.0.1"

