[package]
name = "chshtui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tui-input = "0.14.0"
xml = "1.0.1"

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["blocking", "rustls-tls"]

